--- a/shops.html
+++ b/shops.html
@@ -23,7 +23,7 @@
                 </a>
                 <a class="info-box" href="chicken-licken.html">
                     <img class="right" src="image/rr5.jpg"/>
-                    <img src="imagE/Chicken1.jpg"/>
+                    <img src="image/Chicken1.jpg"/>
                     <h3>CHICKEN LICKIN</h3>
                     <P>if you finish your shopping  go and have something to eat at the resturant.</P>
                 </a>
