--- a/shops.html
+++ b/shops.html
@@ -19,31 +19,31 @@
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Macro2.jpg"/>
                     <h3>MARKRO FURNITURE STORE</h3>
-                    <P>get your family strong quality furniture at our store.</P>
+                    <P>Make your home look beatiful and comfortable, attractable .</P>
                 </a>
                 <a class="info-box" href="chicken-licken.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Chicken1.jpg"/>
                     <h3>CHICKEN LICKIN</h3>
-                    <P>if you finish your shopping  go and have something to eat at the resturant.</P>
+                    <P> Enjoy taste chicken and fried chicken.</P>
                 </a>
                 <a class="info-box" href="gyme.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Gyym2.jpg"/>
                     <h3>PLANET FITNESS GYM</h3>
-                    <P>buy healthy food on your list son that you can manage on your weight and your fitness.</P>
+                    <P>Build your body at the way you like with Planet fitness.</P>
                 </a>
                 <a class="info-box" href="jet-smart.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Jet31.jpg"/>
                     <h3>JET SMART CLOTHING STORE</h3>
-                    <P>Low prices for you.</P>
+                    <P>Get warm clothes and boot .</P>
                 </a>
                 <a class="info-box" href="jewellery.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Jewe.jpg"/>
                     <h3>EDGARS JEWELLERY SHOP</h3>
-                    <P>spoil your kids dont forget to buy their mothers precious earrings.</P>
+                    <P>spoil yourself precious earrings.</P>
                 </a>
                 <a class="info-box" href="boxer.html">
                     <img class="right" src="image/rr5.jpg"/>
