--- a/shops.html
+++ b/shops.html
@@ -18,37 +18,37 @@
                 <a class="info-box" href="markro.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Macro2.jpg"/>
-                    <h3>MARKRO FURNITURE STORE</h3>
+                    <h3>FURNITURE STORE</h3>
                     <P>Make your home look beatiful and comfortable, attractable .</P>
                 </a>
                 <a class="info-box" href="chicken-licken.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Chicken1.jpg"/>
-                    <h3>CHICKEN LICKIN</h3>
+                    <h3>RESTUARANT STORE</h3>
                     <P> Enjoy taste chicken and fried chicken.</P>
                 </a>
                 <a class="info-box" href="gyme.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Gyym2.jpg"/>
-                    <h3>PLANET FITNESS GYM</h3>
+                    <h3>GYM CLUB</h3>
                     <P>Build your body at the way you like with Planet fitness.</P>
                 </a>
                 <a class="info-box" href="jet-smart.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Jet31.jpg"/>
-                    <h3>JET SMART CLOTHING STORE</h3>
+                    <h3>CLOTHING STORE</h3>
                     <P>Get warm clothes and boot .</P>
                 </a>
                 <a class="info-box" href="jewellery.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Jewe.jpg"/>
-                    <h3>EDGARS JEWELLERY SHOP</h3>
+                    <h3>JEWELLERY SHOP</h3>
                     <P>spoil yourself precious earrings.</P>
                 </a>
                 <a class="info-box" href="boxer.html">
                     <img class="right" src="image/rr5.jpg"/>
                     <img src="image/Boxer21.jpg"/>
-                    <h3> BOXER SUPERMARKET STORE</h3>
+                    <h3>SUPERMARKET STORE</h3>
                     <P>fresh food at low prices you can trust.</P>
                 </a>               
             </div>  
